<resources>
    <string name="app_name">SearchProv0.1</string>
    <string name="project_blue">Project Blue</string>
    <string name="logo">logo</string>
    <string name="register">Register</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="i_agree_to_the_terms_of_service">I agree to the Terms of Service</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_a_member_sign_in">Already a member? <a href="D:\Internet DLs\SearchProv01\app\src\main\res\layout\termsofservicetext.xml">Sign In</a></string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="repeatLogo">logo</string>
    <string name="Text">Practice Text</string>
    <string name="textview">Hello! I\'m taking your data!</string>
    <string name="termsofService">testing</string>
    <string name="realTermsOfService"><a href="D:\Internet DLs\SearchProv01\app\src\main\res\layout\termsofservicetext.xml">Terms of Service</a></string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_to_project_blue">Welcome to Project Blue!</string>
    <string name="total_invetory_sold">Items Sold</string>
    <string name="look_into_the_week">Look into the week</string>
    <string name="raw_profits">Raw Profits</string>
    <string name="net_profits">Net Profits</string>
    <string name="inventory">Inventory</string>
    <string-array name="time_amounts">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string name="title_activity_inventory_view">inventoryView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_item">New Item</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="amount_in_stock">Amount In Stock</string>
    <string name="profit_per_sold">Profit per sold (%)</string>
    <string name="weight">Weight (g)</string>
    <string name="extra">Extra</string>
    <string name="submit">submit</string>
    <string name="exit">Exit</string>

</resources>