<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/itemBox"
    android:layout_height="match_parent"
    ><![CDATA[

>






    ]]>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView18"
            android:layout_width="94dp"
            android:layout_height="21dp"
            android:layout_marginTop="24dp"
            android:text="@string/item_name"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="94dp"
        android:layout_height="21dp"
        android:layout_marginTop="4dp"
        android:text="@string/price"
        android:textSize="10dp"
        app:layout_constraintEnd_toStartOf="@+id/textView21"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
            android:layout_width="95dp"
            android:layout_height="21dp"
            android:layout_marginTop="2dp"
            android:text="@string/amount_in_stock"
            android:textSize="10dp"
            app:layout_constraintEnd_toStartOf="@+id/textView21"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="94dp"
            android:layout_height="21dp"
            android:layout_marginTop="44dp"
            android:text="@string/length"
            android:textSize="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.804"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>